--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/rajeshasdevop/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/Rajesh64910354">Twitter</a>
-      <a class="footer-link" href="https://github.com/rajeshasdeveloper">Github</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/rajeshasdevop/" target="_blank">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/Rajesh64910354"target="_blank">Twitter</a>
+      <a class="footer-link" href="https://github.com/rajeshasdeveloper" target="_blank">Github</a>
       <p class="copyright">© 2022 Rajesh K</p> 
     </div>
   </body>
