--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud.svg" alt="cloud-img">
       <h1>I'm Rajesh</h1>
       <h2><p>a <span>pro</span>grammer.</p></h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="images/cloud.svg" alt="cloud-img">
+      <img class="land_svg" src="images/land.svg" alt="land-img">
     </div>
     <div class="middle-container">
       <div class="profile">
@@ -50,9 +50,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/rajeshasdevop/" target="_blank">LinkedIn</a>
-      <a class="footer-link" href="https://github.com/rajeshasdeveloper" target="_blank">Github</a>
-      <a class="footer-link" href="https://twitter.com/Rajesh64910354"target="_blank">Twitter</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/rajeshasdevop/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/Rajesh64910354">Twitter</a>
+      <a class="footer-link" href="https://github.com/rajeshasdeveloper">Github</a>
       <p class="copyright">© 2022 Rajesh K</p> 
     </div>
   </body>
