--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Rajesh</h1>
-      <h2><p>a <span>pro</span>grammer.</p></h2>
+      <h2><p>the <span>software</span>engineer.</p></h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
